--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/date-input": "^2.0.3",
     "@nextui-org/react": "^2.2.10",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/theme": "^2.2.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.0.28",
+    "firebase": "^10.11.1",
+    "framer-motion": "^11.1.7",
+    "mysql2": "^3.9.6",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss-text-stroke": "^0.0.5",
+    "react-hot-toast": "^2.4.1",
+    "scrollreveal": "^4.0.9",
     "uuid": "^9.0.1",
+    "vercel": "^34.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
