--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -25,6 +27,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "scrollreveal": "^4.0.9",
+    "stripe": "^15.5.0",
     "uuid": "^9.0.1",
     "vercel": "^34.1.1",
     "zod": "^3.22.4"
