--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/date-input": "^2.0.3",
-    "@nextui-org/react": "^2.2.10",
+    "@nextui-org/date-picker": "^2.1.1",
+    "@nextui-org/react": "^2.4.1",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.2.10",
     "mysql2": "^3.9.6",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
